# TensorRT-LLM

./: CMakeLists.txt  build_test.sh  lxd_test.cpp  requirements.txt
cpp/include/tensorrt_llm/executor/: types.h
cpp/tensorrt_llm/kernels/: decodingCommon.cu  decodingCommon.h  penaltyKernels.cu  stopCriteriaKernels.cu
cpp/tensorrt_llm/layers/: samplingLayer.cpp
cpp/tensorrt_llm/thop/: dynamicDecodeOp.cpp  dynamicDecodeOp.h
examples/multimodal/: mod_run.py
scripts/: build_wheel.py
